# spv-reflect

./: .gitignore  CMakeLists.txt  main_spv_reflect.cpp
examples/: CMakeLists.txt
shaders/: tri.frag  tri.frag.spv  tri.vert  tri.vert.spv  triangle-spv.h  triangle.frag  triangle.frag.spv  triangle.h  triangle.vert  triangle.vert.spv
src/: CMakeLists.txt  VkType.h  global_fun.cpp  global_fun.h  glsl_to_spv.cpp
